Fix table wrapping; closes #6.

--- a/example/public/style.css
+++ b/example/public/style.css
@@ -172,6 +172,7 @@ table {
 	td {
 		vertical-align: top;
 		padding: 1em 0;
+		white-space: nowrap;
 	}
 
 	.label {
